2007-07-25  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/beinghandler.cpp, src/net/protocol.h: Added being speed to
	protocol.

2007-07-23  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tar.gz, data/maps/new_3-1.tar.gz: Fixed warp
	coordinates.

2007-07-23  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/main.cpp, src/game.cpp: Fixed segfault on exit when OpenGL
	configuration changed.
	* src/beingmanager.cpp: Removed dead code.
	* src/npc.cpp, src/npc.h, src/net/protocol.h, src/net/npchandler.cpp,
	src/net/gameserver/player.cpp, src/net/gameserver/player.h: Converted
	to new server.
	* src/beinghandler.cpp: Added support for NPCs.

2007-07-22  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tar.gz: Fixed insecure filenames.

2007-07-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tar.gz, data/maps/new_3-1.tar.gz: Added warp and
	spawn areas.

2007-07-14  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/beinghandler.cpp, src/net/protocol.h: Reduced size of
	equipment packets.

2007-07-12  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/beinghandler.cpp, src/net/beinghandler.h, src/net/protocol.h:
	Added support for visible equipment.

2007-07-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/window.cpp: Fixed resizing windows by their resize grip.

2007-07-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/player.cpp, src/player.h, src/localplayer.h, src/being.h: Changed
	signatures to prevent the wrong members to be overloaded on
	architectures with 64-bit integers and to shut some compiler warnings.
	* src/localplayer.cpp: Fixed some uninitialized variables.

2007-07-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp, src/gui/chatinput.h, src/gui/chatinput.cpp,
	INSTALL: Ported to Guichan 0.7.0. Unfortunately, since Guichan 0.6.x
	didn't have a FocusListener, compatibility with older versions is
	broken.
